; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_namespace.c_path_is_mountpoint.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_namespace.c_path_is_mountpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.path = type { i32 }

@mount_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @path_is_mountpoint(%struct.path* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.path*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.path* %0, %struct.path** %3, align 8
  %6 = load %struct.path*, %struct.path** %3, align 8
  %7 = getelementptr inbounds %struct.path, %struct.path* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @d_mountpoint(i32 %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %25

12:                                               ; preds = %1
  %13 = call i32 (...) @rcu_read_lock()
  br label %14

14:                                               ; preds = %18, %12
  %15 = call i32 @read_seqbegin(i32* @mount_lock)
  store i32 %15, i32* %4, align 4
  %16 = load %struct.path*, %struct.path** %3, align 8
  %17 = call i32 @__path_is_mountpoint(%struct.path* %16)
  store i32 %17, i32* %5, align 4
  br label %18

18:                                               ; preds = %14
  %19 = load i32, i32* %4, align 4
  %20 = call i64 @read_seqretry(i32* @mount_lock, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %14, label %22

22:                                               ; preds = %18
  %23 = call i32 (...) @rcu_read_unlock()
  %24 = load i32, i32* %5, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %22, %11
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @d_mountpoint(i32) #1

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local i32 @read_seqbegin(i32*) #1

declare dso_local i32 @__path_is_mountpoint(%struct.path*) #1

declare dso_local i64 @read_seqretry(i32*, i32) #1

declare dso_local i32 @rcu_read_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
